--- a/styless.css
+++ b/styless.css
@@ -135,4 +135,49 @@ header .shopping span{
 	    height: 15vw;
     object-fit: cover;
 }
+@media (max-width: 800px) {
+  .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+  }
+
+  .toggle-button {
+      display: flex;
+  }
+
+  .navtabs {
+      display: none;
+      width: 100%;
+      
+  }
+
+  .navtabs ul {
+      width: 100%;
+      flex-direction: column;
+  }
+
+  .navtabs ul li {
+      text-align: center;
+  }
+
+  .navtabs ul li a {
+      padding: .5rem 1rem;
+  }
+
+  .navtabs.active {
+      display: flex;
+  }
+  .logo{
+      display: none;
+  }
+  .footernav ul{
+    flex-direction: column;
+  }
+  .footernav ul li{
+    width: 100%;
+    text-align: center;
+    margin: 10px;
+  }
+  
+}
 
