--- a/styless.css
+++ b/styless.css
@@ -64,6 +64,11 @@ header .shopping span{
     width: 100%;
     padding: 10px;
 }
+.logo{
+    height: 4vw;
+    width: 4vw;
+    text-align: left;
+  }
 .card{
     position: fixed;
     top:0;
